--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
+      #changeColor {
+        height: 300px;
+        width: 300px;
         outline: none;
       }
     </style>
